--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <body> 
 <div id = "myRect" style = "width:100px; height:100px; background: red;transition:all 1s"></div>
 
-	<input type="range" id = "myPicker" min = "100" max= "500">
+	<input type="range" id = "myPicker" min = "100" max= "500">500
+	<div id="rangeValue"></div>
  	<script> 
 		myPicker.onchange = function(){
 			myRect.style.marginLeft = myPicker.value + "px";
+			rangeValue.innerHTML = myPicker.value; 
 	}
  	</script> 
 </body> 
